--- a/index.html
+++ b/index.html
@@ -5,5 +5,15 @@
         <meta charset="UTF-8">
         <title>Socailly Smart City</title>
     </head>
-    <body></body>
+    <body>
+            <!-- <div className="mylink" >
+            <div id="webchat" role="main"></div></div>
+            <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script> -->
+            <script>
+            //   window.WebChat.renderWebChat({
+            //     directLine: window.WebChat.createDirectLine({ token: '5wO-dE0krT8.E05wzXepX9Q-Y_Iwk-wkvNEvCmxLXlax9kHYFKWgC4w' }),
+            //     userID: 'YOUR_USER_ID'
+            //   }, document.getElementById('webchat'));
+            </script>
+    </body>
 </html>
