init chatbot config

--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
     <head>
         <meta charset="UTF-8">
         <title>Socailly Smart City</title>
+        <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
     </head>
     <body>
-            <!-- <div className="mylink" >
-            <div id="webchat" role="main"></div></div>
-            <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script> -->
+            <div id="chatbox" role="main"></div></div>
             <script>
             //   window.WebChat.renderWebChat({
             //     directLine: window.WebChat.createDirectLine({ token: '5wO-dE0krT8.E05wzXepX9Q-Y_Iwk-wkvNEvCmxLXlax9kHYFKWgC4w' }),
             //     userID: 'YOUR_USER_ID'
-            //   }, document.getElementById('webchat'));
+            //   }, document.getElementById('chatbox'));
             </script>
     </body>
 </html>
